Fixed Jump to Present bar expanding momentarily on trigger
Fixed Jump to Present bar expanding momentarily on trigger

--- a/src/chat/bars.scss
+++ b/src/chat/bars.scss
@@ -35,6 +35,7 @@
 	border-radius: 3px;
 	transition: all .15s ease-in-out;
 	padding-bottom: 0px;
+	max-height: 24px;
 	> button {
 		color: hsla(0, 0%, 100%, .7);
 		transition: inherit;
