--- a/src/general/spinner.scss
+++ b/src/general/spinner.scss
@@ -50,3 +50,7 @@
 		animation-delay: .4s;
 	}
 }
+%spinnerPulsingEllipsis {
+	height: auto !important;
+	width: 28px	!important;
+}
